# pccs

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: experiment.md  run-tests.md
.claude/skills/: mlx-patterns.md  simulation-patterns.md  testing-patterns.md
docs/: FINDINGS.md  IMPLEMENTATION_PHASES.md  PRD.md  TESTING_STRATEGY.md
docs/assets/: README.md
docs/assets/division/: evolution_long_history.json  evolution_statistics.json  evolution_validation_raw.json  k1_attractor_metrics.json  multiparameter_metrics.json  scarcity_tradeoff_metrics.json
examples/: basic_simulation.py  division_experiments.py
src/pccs/: __init__.py  bonds.py  config.py  diffusion.py  main.py  metrics.py  phase.py  reactions.py  simulation.py  state.py  visualization.py
tests/: conftest.py  test_config.py  test_state.py
